<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.homeF.view.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color4"
        app:title="@string/settingsFragmentTittle"
        app:titleCentered="true"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tittleText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/subTittle1"
                android:textColor="@color/black"
                android:textSize="25dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_backgroung_editText"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:inputType="text"
                android:hint="@string/nameAndSurnameText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/genderText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/gender"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:focusable="false"
                        android:hint="@string/genderText"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/birthDateText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/birthday"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:focusable="false"
                        android:hint="@string/birthDateText"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/weightText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/weight"
                        android:drawablePadding="12dp"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:inputType="number"
                        android:layout_weight="0.5"
                        android:hint="@string/weightText"/>

                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/heightText"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/height"
                        android:drawablePadding="8dp"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="17dp"
                        android:inputType="number"
                        android:layout_weight="0.5"
                        android:hint="@string/heightText"/>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selectUserImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/color_backgroung_editText"
                    android:textColor="@color/black"
                    android:text="@string/selectUserImageButton"
                    android:layout_weight="0.9"
                    android:drawableLeft="@drawable/baseline_image_24"
                    android:drawablePadding="12dp"/>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/deleteUserImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="0.4"
                    android:backgroundTint="@color/color_logOut"
                    android:drawableLeft="@drawable/baseline_delete_24"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

            <Button
                android:id="@+id/modifyUserDataButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/modifyUserDataButton"
                android:textColor="@color/black"
                android:layout_gravity="center" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/messageText1"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:textSize="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/tittleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/subTittle2"
                android:textColor="@color/black"
                android:textSize="25dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/changePasswordButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="@string/changePasswordButton"/>

            <Button
                android:id="@+id/deleteUserAccountButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="@string/deleteUserAccountButton"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/messageText2"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:textSize="12dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:text="@string/logOutButton"
                android:backgroundTint="@color/color_logOut"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>