<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:forceDarkAllowed="false"
    android:id="@+id/authLayout"
    tools:context=".components.authentication.view.LogInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/auth_rectangle_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/guideline">


            <TextView
                android:id="@+id/tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:text="@string/auth_tittle"
                android:textColor="@color/black"
                android:textSize="40dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/auth_rectangle_background_form"
            app:layout_constraintTop_toBottomOf="@+id/first_layout"
            android:layout_marginTop="-100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/emailText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:gravity="fill_horizontal"
                        android:hint="@string/auth_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:padding="15dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/baseline_alternate_email_24"
                        android:drawablePadding="10dp"
                        android:textColorHint="@color/black"></EditText>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/passwordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill_horizontal"
                        android:gravity="left"
                        android:hint="@string/auth_password"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:padding="15dp"
                        android:background="@color/color_backgroung_editText"
                        android:drawableLeft="@drawable/baseline_vpn_key_24"
                        android:drawablePadding="10dp"
                        android:textColorHint="@color/black"></EditText>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/errorMessage"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:visibility="invisible"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signUpButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/auth_button1"
                        android:padding="12dp"
                        android:backgroundTint="@color/color4"
                        android:textColor="@color/black"></Button>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"/>

                    <Button
                        android:id="@+id/logInButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/auth_button2"
                        android:padding="12dp"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/color4"></Button>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/forgotPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="¿Olvidaste la contraseña?"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:textStyle="italic"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_layout">

            <Button
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/auth_google_button"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:paddingStart="15dp"
                android:textAlignment="textStart"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>